--- a/C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb
+++ b/C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "e9639bdb",
    "metadata": {
     "deletable": false,
@@ -847,7 +847,7 @@
     "        # The RNN after attention\n",
     "        self.post_attention_rnn = tf.keras.layers.LSTM(\n",
     "            units=units,\n",
-    "            return_sequences=False\n",
+    "            return_sequences=True\n",
     "        )  \n",
     "\n",
     "        # The dense layer with logsoftmax activation\n",
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "f6165cf2",
    "metadata": {
     "deletable": false,
@@ -916,7 +916,7 @@
      "text": [
       "Tensor of contexts has shape: (64, 14, 256)\n",
       "Tensor of right-shifted translations has shape: (64, 15)\n",
-      "Tensor of logits has shape: (64, 12000)\n"
+      "Tensor of logits has shape: (64, 15, 12000)\n"
      ]
     }
    ],
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "1b61093a",
    "metadata": {
     "deletable": false,
@@ -962,11 +962,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[91mFailed test case: Incorrect shape of decoder output.\n",
-      "Expected: a shape with 3 dimensions\n",
-      "Got: (2, 6)\n",
-      "\n",
-      "\n"
+      "\u001b[92m All tests passed!\n"
      ]
     }
    ],
@@ -991,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "205fcf31",
    "metadata": {
     "deletable": false,
@@ -1050,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4d4a231c",
    "metadata": {
     "deletable": false,
@@ -1059,7 +1055,21 @@
      "graded"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Exception encountered when calling layer 'translator' (type Translator).\n\ncannot unpack non-iterable NoneType object\n\nCall arguments received by layer 'translator' (type Translator):\n  • inputs=('tf.Tensor(shape=(64, 14), dtype=int64)', 'tf.Tensor(shape=(64, 15), dtype=int64)')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m translator \u001b[38;5;241m=\u001b[39m Translator(VOCAB_SIZE, UNITS)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Compute the logits for every word in the vocabulary\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m logits \u001b[38;5;241m=\u001b[39m \u001b[43mtranslator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mto_translate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msr_translation\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTensor of sentences to translate has shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mto_translate\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTensor of right-shifted translations has shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_translation\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/keras/src/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "Cell \u001b[0;32mIn[20], line 35\u001b[0m, in \u001b[0;36mTranslator.call\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Forward pass of this layer\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \n\u001b[1;32m     25\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;124;03m    tf.Tensor: The log_softmax probabilities of predicting a particular token\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m### START CODE HERE ###\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# In this case inputs is a tuple consisting of the context and the target, unpack it into single variables\u001b[39;00m\n\u001b[0;32m---> 35\u001b[0m context, target \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# Pass the context through the encoder\u001b[39;00m\n\u001b[1;32m     38\u001b[0m encoded_context \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Exception encountered when calling layer 'translator' (type Translator).\n\ncannot unpack non-iterable NoneType object\n\nCall arguments received by layer 'translator' (type Translator):\n  • inputs=('tf.Tensor(shape=(64, 14), dtype=int64)', 'tf.Tensor(shape=(64, 15), dtype=int64)')"
+     ]
+    }
+   ],
    "source": [
     "# Do a quick check of your implementation\n",
     "\n",
