--- a/C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb
+++ b/C4-Natural Language Processing with Attention Models/Week 1/Assignment Python Notebook/C4W1_Assignment.ipynb
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "e9639bdb",
    "metadata": {
     "deletable": false,
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "f6165cf2",
    "metadata": {
     "deletable": false,
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "1b61093a",
    "metadata": {
     "deletable": false,
@@ -1011,10 +1011,10 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # Define the encoder with the appropriate vocab_size and number of units\n",
-    "        self.encoder = None\n",
+    "        self.encoder = Encoder(vocab_size,units)\n",
     "\n",
     "        # Define the decoder with the appropriate vocab_size and number of units\n",
-    "        self.decoder = None\n",
+    "        self.decoder = Decoder(vocab_size,units)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -1031,13 +1031,13 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # In this case inputs is a tuple consisting of the context and the target, unpack it into single variables\n",
-    "        context, target = None\n",
+    "        context, target = inputs\n",
     "\n",
     "        # Pass the context through the encoder\n",
-    "        encoded_context = None\n",
+    "        encoded_context = self.encoder(context)\n",
     "\n",
     "        # Compute the logits by passing the encoded context and the target to the decoder\n",
-    "        logits = None\n",
+    "        logits = self.decoder(encoded_context,target)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -1057,16 +1057,12 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Exception encountered when calling layer 'translator' (type Translator).\n\ncannot unpack non-iterable NoneType object\n\nCall arguments received by layer 'translator' (type Translator):\n  • inputs=('tf.Tensor(shape=(64, 14), dtype=int64)', 'tf.Tensor(shape=(64, 15), dtype=int64)')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m translator \u001b[38;5;241m=\u001b[39m Translator(VOCAB_SIZE, UNITS)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Compute the logits for every word in the vocabulary\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m logits \u001b[38;5;241m=\u001b[39m \u001b[43mtranslator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mto_translate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msr_translation\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTensor of sentences to translate has shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mto_translate\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTensor of right-shifted translations has shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_translation\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/keras/src/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "Cell \u001b[0;32mIn[20], line 35\u001b[0m, in \u001b[0;36mTranslator.call\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Forward pass of this layer\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \n\u001b[1;32m     25\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;124;03m    tf.Tensor: The log_softmax probabilities of predicting a particular token\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m### START CODE HERE ###\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# In this case inputs is a tuple consisting of the context and the target, unpack it into single variables\u001b[39;00m\n\u001b[0;32m---> 35\u001b[0m context, target \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# Pass the context through the encoder\u001b[39;00m\n\u001b[1;32m     38\u001b[0m encoded_context \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Exception encountered when calling layer 'translator' (type Translator).\n\ncannot unpack non-iterable NoneType object\n\nCall arguments received by layer 'translator' (type Translator):\n  • inputs=('tf.Tensor(shape=(64, 14), dtype=int64)', 'tf.Tensor(shape=(64, 15), dtype=int64)')"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor of sentences to translate has shape: (64, 14)\n",
+      "Tensor of right-shifted translations has shape: (64, 15)\n",
+      "Tensor of logits has shape: (64, 15, 12000)\n"
      ]
     }
    ],
@@ -1100,14 +1096,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "37009022",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "w1_unittest.test_translator(Translator, Encoder, Decoder)"
    ]
@@ -1125,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "8a61ef65",
    "metadata": {
     "deletable": false,
@@ -1153,14 +1157,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "87d9bf9f",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "500/500 [==============================] - 48s 68ms/step - loss: 5.2209 - masked_acc: 0.2094 - masked_loss: 5.2234 - val_loss: 4.4715 - val_masked_acc: 0.3034 - val_masked_loss: 4.4725\n",
+      "Epoch 2/20\n",
+      "500/500 [==============================] - 17s 33ms/step - loss: 3.9423 - masked_acc: 0.3793 - masked_loss: 3.9434 - val_loss: 3.3824 - val_masked_acc: 0.4394 - val_masked_loss: 3.3843\n",
+      "Epoch 3/20\n",
+      "500/500 [==============================] - 16s 32ms/step - loss: 2.9700 - masked_acc: 0.5063 - masked_loss: 2.9717 - val_loss: 2.5186 - val_masked_acc: 0.5667 - val_masked_loss: 2.5193\n",
+      "Epoch 4/20\n",
+      "500/500 [==============================] - 16s 31ms/step - loss: 2.3108 - masked_acc: 0.6016 - masked_loss: 2.3117 - val_loss: 2.0334 - val_masked_acc: 0.6394 - val_masked_loss: 2.0340\n",
+      "Epoch 5/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 1.9052 - masked_acc: 0.6609 - masked_loss: 1.9063 - val_loss: 1.7405 - val_masked_acc: 0.6788 - val_masked_loss: 1.7411\n",
+      "Epoch 6/20\n",
+      "500/500 [==============================] - 15s 30ms/step - loss: 1.6315 - masked_acc: 0.6963 - masked_loss: 1.6324 - val_loss: 1.6062 - val_masked_acc: 0.6994 - val_masked_loss: 1.6056\n",
+      "Epoch 7/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 1.5073 - masked_acc: 0.7137 - masked_loss: 1.5080 - val_loss: 1.4946 - val_masked_acc: 0.7109 - val_masked_loss: 1.4952\n",
+      "Epoch 8/20\n",
+      "500/500 [==============================] - 16s 32ms/step - loss: 1.3977 - masked_acc: 0.7295 - masked_loss: 1.3984 - val_loss: 1.3736 - val_masked_acc: 0.7277 - val_masked_loss: 1.3749\n",
+      "Epoch 9/20\n",
+      "500/500 [==============================] - 16s 31ms/step - loss: 1.3125 - masked_acc: 0.7389 - masked_loss: 1.3139 - val_loss: 1.2775 - val_masked_acc: 0.7401 - val_masked_loss: 1.2774\n",
+      "Epoch 10/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 1.1834 - masked_acc: 0.7556 - masked_loss: 1.1848 - val_loss: 1.2139 - val_masked_acc: 0.7547 - val_masked_loss: 1.2147\n",
+      "Epoch 11/20\n",
+      "500/500 [==============================] - 15s 30ms/step - loss: 1.0781 - masked_acc: 0.7673 - masked_loss: 1.0789 - val_loss: 1.1577 - val_masked_acc: 0.7637 - val_masked_loss: 1.1582\n",
+      "Epoch 12/20\n",
+      "500/500 [==============================] - 15s 30ms/step - loss: 1.0550 - masked_acc: 0.7720 - masked_loss: 1.0559 - val_loss: 1.1262 - val_masked_acc: 0.7639 - val_masked_loss: 1.1264\n",
+      "Epoch 13/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 1.0325 - masked_acc: 0.7738 - masked_loss: 1.0337 - val_loss: 1.1185 - val_masked_acc: 0.7620 - val_masked_loss: 1.1193\n",
+      "Epoch 14/20\n",
+      "500/500 [==============================] - 15s 30ms/step - loss: 1.0053 - masked_acc: 0.7781 - masked_loss: 1.0064 - val_loss: 1.0816 - val_masked_acc: 0.7713 - val_masked_loss: 1.0820\n",
+      "Epoch 15/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 0.8983 - masked_acc: 0.7929 - masked_loss: 0.8994 - val_loss: 1.0597 - val_masked_acc: 0.7748 - val_masked_loss: 1.0610\n",
+      "Epoch 16/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 0.8519 - masked_acc: 0.8001 - masked_loss: 0.8525 - val_loss: 1.0492 - val_masked_acc: 0.7773 - val_masked_loss: 1.0508\n",
+      "Epoch 17/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 0.8603 - masked_acc: 0.7978 - masked_loss: 0.8611 - val_loss: 0.9887 - val_masked_acc: 0.7796 - val_masked_loss: 0.9899\n",
+      "Epoch 18/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 0.8582 - masked_acc: 0.7980 - masked_loss: 0.8589 - val_loss: 0.9929 - val_masked_acc: 0.7843 - val_masked_loss: 0.9943\n",
+      "Epoch 19/20\n",
+      "500/500 [==============================] - 15s 30ms/step - loss: 0.8377 - masked_acc: 0.8015 - masked_loss: 0.8384 - val_loss: 0.9815 - val_masked_acc: 0.7843 - val_masked_loss: 0.9815\n",
+      "Epoch 20/20\n",
+      "500/500 [==============================] - 15s 31ms/step - loss: 0.7315 - masked_acc: 0.8188 - masked_loss: 0.7323 - val_loss: 0.9885 - val_masked_acc: 0.7837 - val_masked_loss: 0.9893\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the translator (this takes some minutes so feel free to take a break)\n",
     "\n",
@@ -1181,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "522f6b6f",
    "metadata": {
     "deletable": false,
@@ -1248,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9937547a",
    "metadata": {
     "deletable": false,
@@ -1257,7 +1308,17 @@
      "graded"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Next token: [[6188]]\n",
+      "Logit: -18.7994\n",
+      "Done? False\n"
+     ]
+    }
+   ],
    "source": [
     "# PROCESS SENTENCE TO TRANSLATE AND ENCODE\n",
     "\n",
