--- a/C4-Natural Language Processing with Attention Models/Week 2/Assignment Python Notebook/C4W2_Assignment.ipynb
+++ b/C4-Natural Language Processing with Attention Models/Week 2/Assignment Python Notebook/C4W2_Assignment.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "3f434073",
    "metadata": {
     "deletable": false,
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "5ed8f5af",
    "metadata": {
     "deletable": false,
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "4755bb0b",
    "metadata": {
     "deletable": false,
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c3fd59d0",
    "metadata": {
     "deletable": false,
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "51c1452b",
    "metadata": {
     "deletable": false,
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d677d14e",
    "metadata": {
     "deletable": false,
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d8d3a38d",
    "metadata": {
     "deletable": false,
@@ -951,30 +951,30 @@
     "        # BLOCK 1\n",
     "        # calculate self-attention and return attention scores as attn_weights_block1.\n",
     "        # Dropout will be applied during training (~1 line).\n",
-    "        mult_attn_out1, attn_weights_block1 = None\n",
+    "        mult_attn_out1, attn_weights_block1 = self.mha1(x, x, x, look_ahead_mask, return_attention_scores=True)\n",
     "        \n",
     "        # apply layer normalization (layernorm1) to the sum of the attention output and the input (~1 line)\n",
-    "        Q1 = None\n",
+    "        Q1 = self.layernorm1(x + mult_attn_out1) \n",
     "\n",
     "        # BLOCK 2\n",
     "        # calculate self-attention using the Q from the first block and K and V from the encoder output. \n",
     "        # Dropout will be applied during training\n",
     "        # Return attention scores as attn_weights_block2 (~1 line) \n",
-    "        mult_attn_out2, attn_weights_block2 = None\n",
+    "        mult_attn_out2, attn_weights_block2 = self.mha2(Q1,enc_output,enc_output,padding_mask,return_attention_scores=True)\n",
     "        \n",
     "        # apply layer normalization (layernorm2) to the sum of the attention output and the output of the first block (~1 line)\n",
-    "        mult_attn_out2 = None\n",
+    "        mult_attn_out2 = self.layernorm2(mult_attn_out2+Q1)\n",
     "                \n",
     "        #BLOCK 3\n",
     "        # pass the output of the second block through a ffn\n",
-    "        ffn_output = None\n",
+    "        ffn_output = self.ffn(mult_attn_out2)\n",
     "        \n",
     "        # apply a dropout layer to the ffn output\n",
     "        # use `training=training`\n",
-    "        ffn_output = None\n",
+    "        ffn_output = self.dropout_ffn(ffn_output,training=training)\n",
     "        \n",
     "        # apply layer normalization (layernorm3) to the sum of the ffn output and the output of the second block\n",
-    "        out3 = None\n",
+    "        out3 = self.layernorm3(ffn_output+mult_attn_out2)\n",
     "        ### END CODE HERE ###\n",
     "\n",
     "        return out3, attn_weights_block1, attn_weights_block2\n",
@@ -983,13 +983,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "41686c8b",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using embedding_dim=12 and num_heads=16:\n",
+      "\n",
+      "q has shape:(1, 15, 12)\n",
+      "Output of encoder has shape:(1, 7, 8)\n",
+      "\n",
+      "Output of decoder layer has shape:(1, 15, 12)\n",
+      "Att Weights Block 1 has shape:(1, 16, 15, 15)\n",
+      "Att Weights Block 2 has shape:(1, 16, 15, 7)\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function!\n",
     "key_dim = 12\n",
@@ -1034,14 +1049,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "932f7320",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# UNIT TEST\n",
     "w2_unittest.test_decoderlayer(DecoderLayer, create_look_ahead_mask)"
@@ -1075,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "57dde3be",
    "metadata": {
     "deletable": false,
@@ -1134,27 +1157,27 @@
     "        \n",
     "        ### START CODE HERE ###\n",
     "        # create word embeddings \n",
-    "        x = None\n",
+    "        x = self.embedding(x)\n",
     "        \n",
     "        # scale embeddings by multiplying by the square root of their dimension\n",
     "        x *= tf.math.sqrt(tf.cast(self.embedding_dim, tf.float32))\n",
     "        \n",
     "        # add positional encodings to word embedding\n",
-    "        x += None\n",
+    "        x += self.pos_encoding[:, :seq_len, :]\n",
     "\n",
     "        # apply a dropout layer to x\n",
     "        # use `training=training`\n",
-    "        x = None\n",
+    "        x = self.dropout(x, training=training)\n",
     "\n",
     "        # use a for loop to pass x through a stack of decoder layers and update attention_weights (~4 lines total)\n",
     "        for i in range(self.num_layers):\n",
     "            # pass x and the encoder output through a stack of decoder layers and save the attention weights\n",
     "            # of block 1 and 2 (~1 line)\n",
-    "            x, block1, block2 = None\n",
+    "            x, block1, block2 = self.dec_layers[i](x,enc_output,training,look_ahead_mask,padding_mask)\n",
     "\n",
     "            #update attention_weights dictionary with the attention weights of block 1 and block 2\n",
-    "            attention_weights['decoder_layer{}_block1_self_att'.format(i+1)] = None\n",
-    "            attention_weights['decoder_layer{}_block2_decenc_att'.format(i+1)] = None\n",
+    "            attention_weights['decoder_layer{}_block1_self_att'.format(i+1)] = block1\n",
+    "            attention_weights['decoder_layer{}_block2_decenc_att'.format(i+1)] = block2\n",
     "        ### END CODE HERE ###\n",
     "        \n",
     "        # x.shape == (batch_size, target_seq_len, fully_connected_dim)\n",
@@ -1163,13 +1186,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "04e877fb",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using num_layers=5, embedding_dim=13 and num_heads=17:\n",
+      "\n",
+      "x has shape:(3, 4)\n",
+      "Output of encoder has shape:(3, 7, 9)\n",
+      "\n",
+      "Output of decoder has shape:(3, 4, 13)\n",
+      "\n",
+      "Attention weights:\n",
+      "decoder_layer1_block1_self_att has shape:(3, 17, 4, 4)\n",
+      "decoder_layer1_block2_decenc_att has shape:(3, 17, 4, 7)\n",
+      "decoder_layer2_block1_self_att has shape:(3, 17, 4, 4)\n",
+      "decoder_layer2_block2_decenc_att has shape:(3, 17, 4, 7)\n",
+      "decoder_layer3_block1_self_att has shape:(3, 17, 4, 4)\n",
+      "decoder_layer3_block2_decenc_att has shape:(3, 17, 4, 7)\n",
+      "decoder_layer4_block1_self_att has shape:(3, 17, 4, 4)\n",
+      "decoder_layer4_block2_decenc_att has shape:(3, 17, 4, 7)\n",
+      "decoder_layer5_block1_self_att has shape:(3, 17, 4, 4)\n",
+      "decoder_layer5_block2_decenc_att has shape:(3, 17, 4, 7)\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function!\n",
     "n_layers = 5\n",
@@ -1230,14 +1278,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e92745de",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# UNIT TEST\n",
     "w2_unittest.test_decoder(Decoder, create_look_ahead_mask, create_padding_mask)"
@@ -1279,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c9e6cb07",
    "metadata": {
     "deletable": false,
@@ -1356,13 +1412,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "3cd93c99",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Exception encountered when calling layer 'transformer' (type Transformer).\n\ncannot unpack non-iterable NoneType object\n\nCall arguments received by layer 'transformer' (type Transformer):\n  • input_sentence=tf.Tensor(shape=(1, 7), dtype=int64)\n  • output_sentence=array([[1, 3, 4, 0, 0, 0, 0]])\n  • training=False\n  • enc_padding_mask=tf.Tensor(shape=(1, 1, 7), dtype=float32)\n  • look_ahead_mask=tf.Tensor(shape=(1, 7, 7), dtype=float32)\n  • dec_padding_mask=tf.Tensor(shape=(1, 1, 7), dtype=float32)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 29\u001b[0m\n\u001b[1;32m     25\u001b[0m dec_padding_mask \u001b[38;5;241m=\u001b[39m create_padding_mask(sentence_a)\n\u001b[1;32m     27\u001b[0m look_ahead_mask \u001b[38;5;241m=\u001b[39m create_look_ahead_mask(sentence_a\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m---> 29\u001b[0m test_summary, att_weights \u001b[38;5;241m=\u001b[39m \u001b[43mtransformer\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     30\u001b[0m \u001b[43m    \u001b[49m\u001b[43msentence_a\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[43m    \u001b[49m\u001b[43msentence_b\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     32\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[43m    \u001b[49m\u001b[43menc_padding_mask\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlook_ahead_mask\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     35\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdec_padding_mask\u001b[49m\n\u001b[1;32m     36\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing num_layers=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_layers\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, target_vocab_size=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget_vocab_size\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and num_heads=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_heads\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msentence_a has shape:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msentence_a\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/keras/src/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "Cell \u001b[0;32mIn[21], line 57\u001b[0m, in \u001b[0;36mTransformer.call\u001b[0;34m(self, input_sentence, output_sentence, training, enc_padding_mask, look_ahead_mask, dec_padding_mask)\u001b[0m\n\u001b[1;32m     53\u001b[0m enc_output \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m# call self.decoder with the appropriate arguments to get the decoder output\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# dec_output.shape == (batch_size, tar_seq_len, fully_connected_dim)\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m dec_output, attention_weights \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;66;03m# pass decoder output through a linear layer and softmax (~1 line)\u001b[39;00m\n\u001b[1;32m     60\u001b[0m final_output \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Exception encountered when calling layer 'transformer' (type Transformer).\n\ncannot unpack non-iterable NoneType object\n\nCall arguments received by layer 'transformer' (type Transformer):\n  • input_sentence=tf.Tensor(shape=(1, 7), dtype=int64)\n  • output_sentence=array([[1, 3, 4, 0, 0, 0, 0]])\n  • training=False\n  • enc_padding_mask=tf.Tensor(shape=(1, 1, 7), dtype=float32)\n  • look_ahead_mask=tf.Tensor(shape=(1, 7, 7), dtype=float32)\n  • dec_padding_mask=tf.Tensor(shape=(1, 1, 7), dtype=float32)"
+     ]
+    }
+   ],
    "source": [
     "# Test your function!\n",
     "n_layers = 3\n",
@@ -2023,10 +2093,18 @@
    "id": "41014aac",
    "metadata": {},
    "source": [
-    "**Congratulations on finishing this week's assignment!** You did a lot of work and now you should have a better understanding of the Transformers and their building blocks (encoder and decoder) and how they can be used for text summarization. And remember: you dont need to change much to use the same model for a translator, just change the dataset and it should work!\n",
+    "**Congratulations on finishing this week's assignment!** You did a lot of work and now you should have a better understanding of the Transformers and their building blocks (encoder and decoder) and how they can be used for text summarization. And remember: you don't need to change much to use the same model for a translator, just change the dataset and it should work!\n",
     "\n",
     "**Keep it up!**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0be819d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
